// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`registry contract snapshots > exposes a stable relationship vocabulary 1`] = `
[
  {
    "kind": "contains",
    "label": "contains",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "attached_to",
    "label": "attached to",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "routes_to",
    "label": "routes to",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "connects_to",
    "label": "connects to",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "targets",
    "label": "targets",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "allows",
    "label": "allows",
    "style": "dashed",
    "symmetric": false,
  },
  {
    "kind": "depends_on",
    "label": "depends on",
    "style": "dashed",
    "symmetric": false,
  },
  {
    "kind": "invokes",
    "label": "invokes",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "publishes_to",
    "label": "publishes to",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "subscribes_to",
    "label": "subscribes to",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "reads_from",
    "label": "reads from",
    "style": "dashed",
    "symmetric": false,
  },
  {
    "kind": "writes_to",
    "label": "writes to",
    "style": "dashed",
    "symmetric": false,
  },
  {
    "kind": "assumes",
    "label": "assumes",
    "style": "dashed",
    "symmetric": false,
  },
  {
    "kind": "grants",
    "label": "grants",
    "style": "dashed",
    "symmetric": false,
  },
  {
    "kind": "monitors",
    "label": "monitors",
    "style": "dashed",
    "symmetric": false,
  },
  {
    "kind": "peers_with",
    "label": "peers with",
    "style": "solid",
    "symmetric": true,
  },
]
`;

exports[`registry contract snapshots > exposes a stable, complete sorted list of service ids 1`] = `
[
  "acm",
  "amazon-mq",
  "amplify",
  "api-gateway",
  "app-runner",
  "appsync",
  "athena",
  "aurora",
  "auto-scaling-group",
  "aws-backup",
  "aws-config",
  "azure-aks",
  "azure-app-gateway",
  "azure-app-service",
  "azure-blob-container",
  "azure-cognitive-services",
  "azure-container-instances",
  "azure-cosmos-db",
  "azure-data-factory",
  "azure-databricks",
  "azure-dns-zone",
  "azure-event-grid",
  "azure-event-hub",
  "azure-functions",
  "azure-key-vault",
  "azure-load-balancer",
  "azure-logic-app",
  "azure-managed-disk",
  "azure-managed-identity",
  "azure-ml-workspace",
  "azure-nsg",
  "azure-postgresql",
  "azure-public-ip",
  "azure-redis",
  "azure-resource-group",
  "azure-route-table",
  "azure-service-bus",
  "azure-sql-database",
  "azure-sql-server",
  "azure-storage-account",
  "azure-storage-queue",
  "azure-stream-analytics",
  "azure-subnet",
  "azure-synapse",
  "azure-vm",
  "azure-vmss",
  "azure-vnet",
  "batch",
  "bedrock",
  "cloudformation",
  "cloudfront",
  "cloudtrail",
  "cloudwatch",
  "cloudwatch-alarm",
  "cloudwatch-logs",
  "codebuild",
  "codecommit",
  "codedeploy",
  "codepipeline",
  "cognito",
  "comprehend",
  "control-tower",
  "cost-explorer",
  "documentdb",
  "dynamodb",
  "ebs-volume",
  "ec2-instance",
  "ecr",
  "ecs-cluster",
  "ecs-service",
  "efs",
  "eks-cluster",
  "elastic-beanstalk",
  "elastic-load-balancer",
  "elasticache",
  "emr",
  "eventbridge",
  "fargate",
  "fsx",
  "gcp-app-engine",
  "gcp-backend-service",
  "gcp-bigquery-dataset",
  "gcp-bigquery-table",
  "gcp-bigtable",
  "gcp-cloud-cdn",
  "gcp-cloud-dns",
  "gcp-cloud-functions",
  "gcp-cloud-kms-cryptokey",
  "gcp-cloud-kms-keyring",
  "gcp-cloud-nat",
  "gcp-cloud-router",
  "gcp-cloud-run",
  "gcp-cloud-sql",
  "gcp-cloud-storage",
  "gcp-cloud-tasks",
  "gcp-compute-engine",
  "gcp-dataflow",
  "gcp-dataproc",
  "gcp-eventarc",
  "gcp-filestore",
  "gcp-firestore",
  "gcp-firewall-rule",
  "gcp-gke-cluster",
  "gcp-instance-group-manager",
  "gcp-memorystore",
  "gcp-persistent-disk",
  "gcp-pubsub-subscription",
  "gcp-pubsub-topic",
  "gcp-secret-manager",
  "gcp-service-account",
  "gcp-spanner",
  "gcp-subnet",
  "gcp-vertex-ai-endpoint",
  "gcp-vpc-network",
  "gcp-workflows",
  "global-accelerator",
  "glue",
  "guardduty",
  "iam-group",
  "iam-identity-center",
  "iam-policy",
  "iam-role",
  "iam-user",
  "inspector",
  "internet-gateway",
  "kendra",
  "kinesis-data-streams",
  "kinesis-firehose",
  "kms",
  "lake-formation",
  "lambda",
  "lambda-edge",
  "lex",
  "lightsail",
  "memorydb",
  "msk",
  "nacl",
  "nat-gateway",
  "neptune",
  "opensearch",
  "organizations",
  "polly",
  "quicksight",
  "rds",
  "redshift",
  "rekognition",
  "route-table",
  "route53",
  "s3-bucket",
  "s3-glacier",
  "sagemaker",
  "secrets-manager",
  "security-group",
  "security-hub",
  "shield",
  "sns",
  "sqs",
  "step-functions",
  "storage-gateway",
  "subnet-private",
  "subnet-public",
  "systems-manager",
  "target-group",
  "textract",
  "transcribe",
  "transit-gateway",
  "translate",
  "trusted-advisor",
  "vpc",
  "vpc-endpoint",
  "vpc-peering",
  "waf",
  "x-ray",
]
`;

exports[`registry contract snapshots > groups a stable set of service ids under each category 1`] = `
{
  "ai-ml": [
    "azure-cognitive-services",
    "azure-ml-workspace",
    "bedrock",
    "comprehend",
    "gcp-vertex-ai-endpoint",
    "kendra",
    "lex",
    "polly",
    "rekognition",
    "sagemaker",
    "textract",
    "transcribe",
    "translate",
  ],
  "analytics": [
    "athena",
    "azure-data-factory",
    "azure-databricks",
    "azure-stream-analytics",
    "azure-synapse",
    "emr",
    "gcp-bigquery-dataset",
    "gcp-bigquery-table",
    "gcp-dataflow",
    "gcp-dataproc",
    "glue",
    "kinesis-firehose",
    "lake-formation",
    "msk",
    "opensearch",
    "quicksight",
    "redshift",
  ],
  "compute": [
    "auto-scaling-group",
    "azure-app-service",
    "azure-functions",
    "azure-vm",
    "azure-vmss",
    "batch",
    "ec2-instance",
    "elastic-beanstalk",
    "gcp-app-engine",
    "gcp-cloud-functions",
    "gcp-cloud-run",
    "gcp-compute-engine",
    "gcp-instance-group-manager",
    "lambda",
    "lightsail",
  ],
  "containers": [
    "app-runner",
    "azure-aks",
    "azure-container-instances",
    "ecr",
    "ecs-cluster",
    "ecs-service",
    "eks-cluster",
    "fargate",
    "gcp-gke-cluster",
  ],
  "database": [
    "aurora",
    "azure-cosmos-db",
    "azure-postgresql",
    "azure-redis",
    "azure-sql-database",
    "azure-sql-server",
    "documentdb",
    "dynamodb",
    "elasticache",
    "gcp-bigtable",
    "gcp-cloud-sql",
    "gcp-firestore",
    "gcp-memorystore",
    "gcp-spanner",
    "memorydb",
    "neptune",
    "rds",
  ],
  "deployment": [
    "amplify",
    "cloudformation",
    "codebuild",
    "codecommit",
    "codedeploy",
    "codepipeline",
  ],
  "edge": [
    "cloudfront",
    "gcp-cloud-cdn",
    "global-accelerator",
    "lambda-edge",
  ],
  "identity": [
    "azure-managed-identity",
    "gcp-service-account",
    "iam-group",
    "iam-identity-center",
    "iam-policy",
    "iam-role",
    "iam-user",
  ],
  "integration": [
    "amazon-mq",
    "api-gateway",
    "appsync",
    "azure-event-grid",
    "azure-event-hub",
    "azure-logic-app",
    "azure-service-bus",
    "azure-storage-queue",
    "eventbridge",
    "gcp-cloud-tasks",
    "gcp-eventarc",
    "gcp-pubsub-subscription",
    "gcp-pubsub-topic",
    "gcp-workflows",
    "kinesis-data-streams",
    "sns",
    "sqs",
    "step-functions",
  ],
  "management": [
    "aws-config",
    "azure-resource-group",
    "control-tower",
    "cost-explorer",
    "organizations",
    "systems-manager",
    "trusted-advisor",
  ],
  "monitoring": [
    "cloudtrail",
    "cloudwatch",
    "cloudwatch-alarm",
    "cloudwatch-logs",
    "x-ray",
  ],
  "networking": [
    "azure-app-gateway",
    "azure-dns-zone",
    "azure-load-balancer",
    "azure-nsg",
    "azure-public-ip",
    "azure-route-table",
    "azure-subnet",
    "azure-vnet",
    "elastic-load-balancer",
    "gcp-backend-service",
    "gcp-cloud-dns",
    "gcp-cloud-nat",
    "gcp-cloud-router",
    "gcp-firewall-rule",
    "gcp-subnet",
    "gcp-vpc-network",
    "internet-gateway",
    "nacl",
    "nat-gateway",
    "route-table",
    "route53",
    "security-group",
    "subnet-private",
    "subnet-public",
    "target-group",
    "transit-gateway",
    "vpc",
    "vpc-endpoint",
    "vpc-peering",
  ],
  "security": [
    "acm",
    "azure-key-vault",
    "cognito",
    "gcp-cloud-kms-cryptokey",
    "gcp-cloud-kms-keyring",
    "gcp-secret-manager",
    "guardduty",
    "inspector",
    "kms",
    "secrets-manager",
    "security-hub",
    "shield",
    "waf",
  ],
  "storage": [
    "aws-backup",
    "azure-blob-container",
    "azure-managed-disk",
    "azure-storage-account",
    "ebs-volume",
    "efs",
    "fsx",
    "gcp-cloud-storage",
    "gcp-filestore",
    "gcp-persistent-disk",
    "s3-bucket",
    "s3-glacier",
    "storage-gateway",
  ],
}
`;
